# gvk

./: .gitignore  Cargo.toml  README.md  access_token.md  gvk.desktop
.github/workflows/: rust.yml
resources/tests/: readme.md
resources/tests/newsfeed/: 2021-01-15_10-44-00.json  2021-01-15_18-28-00.json  2021-01-15_20-57-00.json  2021-01-15_22-14-00.json  2021-01-15_23-21-00.json  2021-01-16_00-05-00.json  2021-01-16_12-59-00.json  2021-01-16_15-13-43.json  2021-01-16_15-35-47.json  2021-01-17_19-28-24.json  2021-01-27_22-08-49.json  2021-06-28_17-51-40.json
src/: #main.glade#  main.glade  main.glade~  main.rs  models.rs  news_item_row_data.rs  news_item_view.glade  source_item_view.glade  storage.rs  ui.rs  utils.rs  view_models.rs  vk_provider.rs
src/models/: actor.rs  news_item.rs  news_source.rs  user.rs
src/storage/: download.rs
src/ui/: news_item_row_data.rs  news_list_box_row.rs  sources_list_box_row.rs
src/view_models/: news_item.rs  news_item_row_data.rs  news_source_row_data.rs
src/vk_provider/: access_token_provider.rs  account.rs  constants.rs  news_update.rs  newsfeed.rs  sources_manager.rs  sources_update.rs  user.rs
