[package]
name = "gvk"
version = "0.1.0"
authors = ["avramenko.a@gmail.com <avramenko.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9", features = ["v3_16"] }
gio = { version = "0.9", features = ["v2_44"] }
glib = "0.10"
chrono = "*"
#futures = "0.3"
async-std = { version = "1.8.0", features = ["unstable"] }
