[package]
name = "gvk"
version = "0.1.0"
authors = ["avramenko.a@gmail.com <avramenko.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "fs"] }
reqwest = "0.11"
gtk = { version = "0.9", features = ["v3_16"] }
gio = { version = "0.9", features = ["v2_44"] }
glib = "0.10"
webkit2gtk = { version = "0.11" }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytes = "1.0"
# rvk = "0.19"
rvk = { git = "https://github.com/0xAAE/rvk.git", branch = "research", features = ["trace_response"] }
